--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -1,6 +1,13 @@
 /*
 	Default styles for defaut templates
 */
+body{
+	background: #2A3269;
+}
+#header{
+	background-image: none;
+	background:#2A3269;
+}
 #header-inside{
 	padding: 10px 0px 10px 0px;
 }
@@ -23,5 +30,10 @@
 	text-align: center;
 	margin-top: 75px;
 	border:none;
-	
+	background:#2A3269;
+}
+
+#footer-bottom{
+	background-image: none;
+	background: #2A3269;
 }
