--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -89,6 +89,11 @@ body{
 	margin-bottom: 10px;
 }
 
+/* NEVER REMOVE THIS!!!! */
+#first-time{
+	display:none;
+}
+
 /* Footer styles */
 
 #footer-bottom{
