--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -108,11 +108,15 @@ body{
 	width: 100%;
     height: 100%;
     text-align: center;
+    padding-top: 0px;
+}
 
+#footer-bottom h2 {
+	color: white;
 }
 
 #footer-bottom img {
-	padding-top: 10px;
+	padding: 10px 5px 0px 5px;
 	width:20%;
 	height: 20%;
 	
