--- a/sites/all/themes/ONT-Theme/css/custom/contact.css
+++ b/sites/all/themes/ONT-Theme/css/custom/contact.css
@@ -6,11 +6,12 @@
 	height: 200px;
 	margin-right:1%;
 	float: left;
-	padding-bottom:10px;
+	padding-bottom:15px;
 }
 
 #profile img {
 	width:100;
+	height: 210px;
 }
 
 #profileImage {
@@ -27,7 +28,7 @@
 }
 
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 500px) {
 	#profile {
 		width:100% !important;
 	}
