--- a/sites/all/themes/ONT-Theme/css/custom/process.css
+++ b/sites/all/themes/ONT-Theme/css/custom/process.css
@@ -47,3 +47,14 @@
     -webkit-margin-end: 0px;
     font-size:14px;
 }
+
+.accordion-content h3 {
+	margin-bottom:10px;
+	margin-top:10px;
+}
+
+.accordion-content h2 {
+	margin-bottom:10px;
+	margin-top:10px;
+	font-weight: bold;
+}
