--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -61,6 +61,10 @@ body{
 	color:#fff !important;
 }
 
+.expanded .leaf{
+	background-color: black;
+}
+
 /*
 	Header styles for different screen sizes
 */
