--- a/sites/all/themes/ONT-Theme/css/custom/process.css
+++ b/sites/all/themes/ONT-Theme/css/custom/process.css
@@ -60,3 +60,13 @@
 	margin-top:10px;
 	font-weight: bold;
 }
+
+@media (max-width: 820px){
+	.processimage{
+		display: none;
+	}
+
+	.custom-accordion{
+		width: 98%;
+	}
+}
