New logo placeholder

--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -19,6 +19,13 @@ body{
 	overflow:visible !important;
 }
 
+
+/* Maybe just temporary?? */
+.default-logo img{
+	    margin-top: 11%;
+    height: 68px;
+}
+
 #header-inside-right{
 	float:right;
 	width: auto;
