css, teheme screnshot, logo

--- a/sites/all/themes/ONT-Theme/css/custom/main.css
+++ b/sites/all/themes/ONT-Theme/css/custom/main.css
@@ -25,8 +25,8 @@ body{
 
 /* Maybe just temporary?? */
 .default-logo img{
-	margin-top: 11%;
-    height: 68px;
+	margin-top: 0%;
+    height: 111px;
 }
 
 #header-inside-right{
@@ -221,4 +221,12 @@ button.projectlink {
 		width:28%;
 		height: 28%;
 	}
+}
+
+.form-submit{
+	background-color: rgba(0,158,218,1);
+}
+
+.node-readmore a{
+	background-color: rgba(0,158,218,1);
 }
