Css fixes and database changes

--- a/sites/all/themes/ONT-Theme/css/custom/front.css
+++ b/sites/all/themes/ONT-Theme/css/custom/front.css
@@ -8,13 +8,15 @@
 }
 
 #block-views-ajankohtista-block{
-    width:50%;
+    width:40%;
+    margin-right: 2%;
     float:left;
    
 }
 
 #block-views-tapahtumat-block{
     width:35%;
+    margin-left: 10%;
     float:left;
     
 }
